[gd_scene load_steps=3 format=3 uid="uid://dshop0s4t5b2"]

[ext_resource type="Script" path="res://Scrips/shop.gd" id="1_shop_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_shop_panel"]
bg_color = Color(0.08, 0.08, 0.12, 0.92)
corner_radius_bottom_left = 10
corner_radius_bottom_right = 10
corner_radius_top_left = 10
corner_radius_top_right = 10
content_margin_left = 18.0
content_margin_right = 18.0
content_margin_top = 16.0
content_margin_bottom = 16.0

[node name="Shop" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_shop_script")

[node name="ShopRoot" type="Control" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Dim" type="ColorRect" parent="ShopRoot"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.6)

[node name="CenterContainer" type="CenterContainer" parent="ShopRoot"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="ShopRoot/CenterContainer"]
custom_minimum_size = Vector2(420, 400)
theme_override_styles/panel = SubResource("StyleBoxFlat_shop_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="ShopRoot/CenterContainer/PanelContainer"]
alignment = 1
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="ShopRoot/CenterContainer/PanelContainer/VBoxContainer"]
text = "SHOP"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 26
theme_override_colors/font_color = Color(0.95, 0.95, 1, 1)

[node name="ScoreLabel" type="Label" parent="ShopRoot/CenterContainer/PanelContainer/VBoxContainer"]
text = "SCORE: 0"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.85, 0.9, 0.95, 1)

[node name="ShieldButton" type="Button" parent="ShopRoot/CenterContainer/PanelContainer/VBoxContainer"]
text = "Shield (3 durability) - 150"
custom_minimum_size = Vector2(240, 44)

[node name="LifeButton" type="Button" parent="ShopRoot/CenterContainer/PanelContainer/VBoxContainer"]
text = "Extra Life (+1) - 300"
custom_minimum_size = Vector2(240, 44)

[node name="PowerButton" type="Button" parent="ShopRoot/CenterContainer/PanelContainer/VBoxContainer"]
text = "Power Shots (+1 dmg) - 200"
custom_minimum_size = Vector2(240, 44)

[node name="LaserButton" type="Button" parent="ShopRoot/CenterContainer/PanelContainer/VBoxContainer"]
text = "Laser Shot - 400"
custom_minimum_size = Vector2(240, 44)

[node name="MissileButton" type="Button" parent="ShopRoot/CenterContainer/PanelContainer/VBoxContainer"]
text = "Homing Missile - 400"
custom_minimum_size = Vector2(240, 44)

[node name="ContinueButton" type="Button" parent="ShopRoot/CenterContainer/PanelContainer/VBoxContainer"]
text = "Continue"
custom_minimum_size = Vector2(200, 48)
